# dj_celery

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conftest.py  data.json  docker-compose.yaml  env.sample  nginx.conf  pyproject.toml  pytest.ini
app/: models.py  serializer.py  task.py  urls.py  views.py
app/management/commands/: check_db.py  create_user.py
app/migrations/: 0001_initial.py  0002_article.py
core/: celery.py  settings.py  urls.py  wsgi.py
core/test_conf/: settings.py
installer/: requirements.txt  test_requirements.txt
scripts/: automation.sh  run_celery.sh
tests/rest_client/: __init__.py
tests/user/: test_user.py
